# supa-langgraph-rag-scaffold

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  SPECIFICATION.md  docker-compose.yml
.claude/: beautify-commit.local.md
backend/: Dockerfile  examples.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  adapters.py  gemini_embeddings.py  rag_store.py  tool_factory.py
backend/app/debug/: README.md  __init__.py  cli.py  evaluator.py  examples.py  retrieval_debugger.py  robustness.py  visualizer.py
backend/app/graph/: edges.py  nodes.py  state.py  workflow.py
backend/app/ingestion/: extractor.py  loader.py
backend/app/services/: supabase_ops.py
docs/: v1_guide.md
frontend-sdk/: client.ts
supabase/migrations/: 20260125_init_graph_schema.sql  20260126_debug_functions.sql  20260126_init_gemini_schema.sql  20260126_update_embedding_dim.sql
supabase/seed/: stub_data.sql
