[project]
name = "supa-langgraph-rag-scaffold"
version = "1.0.0"
description = "2026 SOTA Supabase-Native Agentic GraphRAG Scaffold"
requires-python = ">=3.11"
dependencies = [
    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    
    # Supabase
    "supabase>=2.4.0",
    
    # API
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    
    # Database
    "psycopg[pool]>=3.1.18",
    
    # Core
    "openai>=1.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
